test/cases/error/undeclared-operator.cba
-- Symbolic operators must be given a fixity before use.
-- @expect-error: no fixity declaration
return (1 <+> 2)
